--- a/.github/workflows/gemini-invoke.yml
+++ b/.github/workflows/gemini-invoke.yml
@@ -79,7 +79,7 @@ jobs:
                     "--rm",
                     "-e",
                     "GITHUB_PERSONAL_ACCESS_TOKEN",
-                    "ghcr.io/github/github-mcp-server"
+                    "ghcr.io/github/github-mcp-server:v0.18.0"
                   ],
                   "includeTools": [
                     "add_issue_comment",
@@ -88,10 +88,7 @@ jobs:
                     "list_issues",
                     "search_issues",
                     "create_pull_request",
-                    "get_pull_request",
-                    "get_pull_request_comments",
-                    "get_pull_request_diff",
-                    "get_pull_request_files",
+                    "pull_request_read"
                     "list_pull_requests",
                     "search_pull_requests",
                     "create_branch",
